--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "mr.-burger",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "main": "server.js",
+  "license": "https://github.com/bidhandev/Mr.-Burger/blob/main/LICENSE",
+  "author": "Bidhan Dev",
+  "scripts": {
+    "start": "node server.js",
+    "start:dev": "nodemon server.js",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
@@ -21,6 +29,11 @@
     "socket.io": "^4.5.0"
   },
   "devDependencies": {
-    "laravel-mix": "5.0.4"
+    "cross-env": "^7.0.3",
+    "laravel-mix": "5.0.4",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.14"
   }
 }
