fix order submit function

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 COOKIE_SECRET = "your_secret_cookie_key"
+MONGO_USERNAME = "your_mongodb_username"
+MONGO_PASSWORD = "your_mongodb_password"
+MONGO_COLLECTION = "your_mongodb_collection"
